<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="about">About</string>
    <string name="all">All</string>
    <string name="android_version">Android %s</string>
    <string name="apk_corrupted">APK file(s) is corrupted. Aborting…</string>
    <string name="apk_installer">AEE APK Installer</string>
    <string name="apks">APK\'s</string>
    <string name="apply">Apply</string>
    <string name="app_name_short" translatable="false">AEE</string>
    <string name="apps">Apps</string>
    <string name="apps_exported">Exported APK\'s</string>
    <string name="apps_installed">Installed Apps</string>
    <string name="assembling">Assembling\n\'%s\'</string>
    <string name="batch_options">Batch Options</string>
    <string name="build">Build</string>
    <string name="building">Building\'%s\'…</string>
    <string name="bundle_install_question">Are you sure to install app bundle \'%s\'?</string>
    <string name="bundles">Bundles</string>
    <string name="cancel">Cancel</string>
    <string name="cancelling">Cancelling…</string>
    <string name="certificate">Certificate</string>
    <string name="choose_new">Choose New</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="clear_cache_summary">Delete internal settings of AEE</string>
    <string name="clear_cache_message">Everything, except the exported applications, will be removed.</string>
    <string name="clearing_cache_message">Clearing Cache…</string>
    <string name="copying">Copying \'%s\'…</string>
    <string name="copyright_text">2021–2025, APK Explorer &amp; Editor</string>
    <string name="decompiling">Decompiling \'%s\'…</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="delete_question">Delete %s?</string>
    <string name="delete_folder">Delete folder</string>
    <string name="delete_selected_files">Delete selected files</string>
    <string name="deleting">Deleting \'%s\'…</string>
    <string name="details">Details</string>
    <string name="documentation">Documentation</string>
    <string name="documentation_summary">Check out AEE documentation</string>
    <string name="donations">Donations</string>
    <string name="donations_summary">Support the development of AEE</string>
    <string name="discard">Discard</string>
    <string name="discard_message">Discard the changes made on this file?</string>
    <string name="export">Export</string>
    <string name="export_app_batch_question">Export the following apps?</string>
    <string name="export_complete_message">The selected resource is successfully exported into \'%s\'</string>
    <string name="export_options">On Exporting (APK\'s)</string>
    <string name="export_options_title">Export Options</string>
    <string name="export_project_question">Make a copy of this project folder into device storage?</string>
    <string name="export_project_replace">\'%s\' already exists. Do you want to replace it?</string>
    <string name="export_path_apks">Export Path (APK\'s)</string>
    <string name="export_path_default">Internal Storage/AEE</string>
    <string name="export_path_download">Download</string>
    <string name="export_path_files_dir">External Files Directory</string>
    <string name="export_path_resources">Export Path (non-APK\'s)</string>
    <string name="export_question">Export to device storage?</string>
    <string name="export_resign">Export &amp; Re-sign</string>
    <string name="export_selected_files">Export selected files</string>
    <string name="export_storage">Export to storage</string>
    <string name="exported_apks_path">Selected apps are exported to:\n\n\'%s\'</string>
    <string name="exporting">Exporting %s…</string>
    <string name="exporting_batch">Exporting selected apps…</string>
    <string name="exploring">Exploring %s…</string>
    <string name="explore_error_status">Failed to explore %s</string>
    <string name="explore_options">On Exploring an App</string>
    <string name="explore_options_full">Full decompile (slower)</string>
    <string name="explore_options_simple">Simple decompile (faster)</string>
    <string name="explore_options_quick">Quick editing (easier)</string>
    <string name="failed">Failed</string>
    <string name="failed_smali_message">The following \'smali\' files are failed to assemble.\n\n%s</string>
    <string name="file_path_error">Failed to get file path from external File Manager</string>
    <string name="grant">Grant</string>
    <string name="got_it">Got It</string>
    <string name="important">Important</string>
    <string name="install">Install</string>
    <string name="install_bundle_question">Are you sure to install selected app bundle?</string>
    <string name="install_question">Install %s?</string>
    <string name="install_resign">Re-sign &amp; Install</string>
    <string name="install_storage">Install from Storage</string>
    <string name="installer_action">On Installing APK\'s</string>
    <string name="installer_message">AEE Split APK installer will handle normal APK\'s, split APK\'s as well as \'xapk\', \'apks\' and \'apkm\' App bundles. In order to initialize an installation, simply select the installation file(s) from the next screen and follow onscreen instructions.</string>
    <string name="installation_cancel_message">Are you sure to cancel the installation?</string>
    <string name="installing">Installing %s…</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="invite_friends_Summary">Invite your friends to try AEE</string>
    <string name="keypair_mismatch_message">Mismatching keypair!</string>
    <string name="keystore_alias_hint">Choose an Alias</string>
    <string name="keystore_alias_password_hint">Input Alias Password</string>
    <string name="keystore_alias_unavailable">No Keystore Alias found!</string>
    <string name="keystore_loading_failed">Failed to load Keystore!</string>
    <string name="keystore_password_hint">Input Keystore Password</string>
    <string name="language">Language</string>
    <string name="language_ar" translatable="false">العربية (%s)</string>
    <string name="language_el" translatable="false">Ελληνικά</string>
    <string name="language_en" translatable="false">English (%s)</string>
    <string name="language_es" translatable="false">Español (%s)</string>
    <string name="language_fr" translatable="false">français (%s)</string>
    <string name="language_hu" translatable="false">Magyar</string>
    <string name="language_in" translatable="false">bahasa Indonesia</string>
    <string name="language_ja" translatable="false">日本</string>
    <string name="language_ko" translatable="false">한국어</string>
    <string name="language_pl" translatable="false">Polski"</string>
    <string name="language_pt" translatable="false">Português (%s)</string>
    <string name="language_ru" translatable="false">русский</string>
    <string name="language_zh" translatable="false">中文 (%s)</string>
    <string name="last_modified">Last Modified: %s</string>
    <string name="loading">Loading…</string>
    <string name="manifest">Manifest</string>
    <string name="name_empty">Name shouldn\'t be empty. Aborting…</string>
    <string name="ok">OK</string>
    <string name="open">Open</string>
    <string name="open_as_text">Open as text</string>
    <string name="password_invalid">Password doesn\'t match!</string>
    <string name="permission_denied_message">Permission denied for accessing device storage</string>
    <string name="permissions">Permissions</string>
    <string name="preparing_apk">Preparing %s APK…</string>
    <string name="preparing_bundle">Preparing app bundle for sharing…</string>
    <string name="preparing_bundle_install">Preparing \'%s\' for installation…</string>
    <string name="preparing_source">Preparing source for APK building…</string>
    <string name="press_back">Press Back Button Again to close APK Explorer</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_summary">Read Privacy Policy</string>
    <string name="private_key">Private Key</string>
    <string name="private_key_invalid">Selected Private key is invalid!</string>
    <string name="private_key_summary">Select custom Private key</string>
    <string name="project_exist_action">On Exiting a Project</string>
    <string name="projects">Projects</string>
    <string name="prompt">Prompt</string>
    <string name="quick_edits_app_name">App name</string>
    <string name="quick_edits_sdk_min">Min SDK</string>
    <string name="quick_edits_package_name">Package name</string>
    <string name="quick_edits_progress_message">Applying modifications…</string>
    <string name="quick_edits_title">Quick Edits</string>
    <string name="quick_edits_toast_failed">Unfortunately, generation of modified APK file is failed.</string>
    <string name="quick_edits_toast_success">Modified APK file is generated.\n\nPath: \'%s\'</string>
    <string name="quick_edits_version_code">Version code</string>
    <string name="quick_edits_version_name">Version name</string>
    <string name="rate_us">Rate AEE</string>
    <string name="rate_us_Summary">Rate or/and Review AEE in Google Play</string>
    <string name="replace">Replace</string>
    <string name="replace_file_question">Replace %s with selected file?</string>
    <string name="replace_question">Replace %s with</string>
    <string name="report_issue">Report Issue</string>
    <string name="report_issue_summary">Raise an issue at GitHub</string>
    <string name="reset">Reset</string>
    <string name="resign_only">Re-sign Only</string>
    <string name="resigned_apks_error">Building is aborted due to errors in assembling \'smali\' files. Please check the \'Details\' to find out more.</string>
    <string name="resigned_apks_path">Re-signed APK file(s) are generated.\n\nPath: \'%s\'</string>
    <string name="resigning_apks">Re-signing selected APK\'s…</string>
    <string name="res_add_new">Add new value</string>
    <string name="res_choose_new">Choose new value for \"%s\"</string>
    <string name="res_viewer">Resource Viewer</string>
    <string name="root">Root</string>
    <string name="save">Save</string>
    <string name="save_apk_message">Do you want to prepare a signed APK with the current modifications?</string>
    <string name="save_projects_question">Save project for future use?</string>
    <string name="save_question">Save changes made on this file?</string>
    <string name="save_to_downloads">Save to Downloads</string>
    <string name="saving">Saving…</string>
    <string name="sdcard">Internal Storage</string>
    <string name="sdk_compile">Compile SDK: %s</string>
    <string name="sdk_minimum">Minimum SDK: %s</string>
    <string name="search">Search…</string>
    <string name="search_files">Search files</string>
    <string name="select">Select</string>
    <string name="select_all">Select all</string>
    <string name="select_apk">Select Split APK\'s</string>
    <string name="select_storage">Select from Storage</string>
    <string name="settings">Settings</string>
    <string name="settings_general">General</string>
    <string name="settings_misc">Miscellaneous</string>
    <string name="share">Share</string>
    <string name="share_message">Share %s?</string>
    <string name="share_with">Share with</string>
    <string name="sign_apk_custom">Custom Key</string>
    <string name="sign_apk_default">Default Key</string>
    <string name="sign_apk_with">Sign APK\'s with</string>
    <string name="sort_by">Sort Apps</string>
    <string name="sort_by_id">Package ID</string>
    <string name="sort_by_installed">Installed Time</string>
    <string name="sort_by_name">Name</string>
    <string name="sort_by_size">Size</string>
    <string name="sort_by_updated">Updated Time</string>
</resources>