<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="15dp"
    android:layout_height="wrap_content"
    android:layout_marginVertical="10dp"
    android:layout_width="match_parent"
    android:paddingHorizontal="15dp"
    android:layout_gravity="center"
    android:orientation="vertical">

    <View
        android:layout_width="32dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:background="?android:attr/colorControlNormal"
        android:layout_marginVertical="10dp"
        android:alpha="0.2" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_by"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:textColor="?android:attr/colorPrimary"
        android:textStyle="bold"
        android:textSize="15sp" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipSortApps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:selectionRequired="true"
        app:singleSelection="true" >

        <com.google.android.material.chip.Chip
            android:id="@+id/appName"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_name"
            android:textStyle="bold" />

        <com.google.android.material.chip.Chip
            android:id="@+id/packageName"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_id"
            android:textStyle="bold" />

        <com.google.android.material.chip.Chip
            android:id="@+id/timeInstalled"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_installed"
            android:textStyle="bold" />

        <com.google.android.material.chip.Chip
            android:id="@+id/timeUpdated"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_updated"
            android:textStyle="bold" />

        <com.google.android.material.chip.Chip
            android:id="@+id/size"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_size"
            android:textStyle="bold" />
    </com.google.android.material.chip.ChipGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_gravity="center_horizontal"
        android:background="?android:attr/colorControlNormal"
        android:layout_marginVertical="10dp"
        android:alpha="0.2" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchReverseOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="15sp" />

    <View
        android:layout_width="32dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:background="?android:attr/colorControlNormal"
        android:layout_marginVertical="10dp"
        android:alpha="0.2" />
</androidx.appcompat.widget.LinearLayoutCompat>