<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:gravity="center" >

    <View
        android:layout_width="32dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:background="?android:attr/colorControlNormal"
        android:layout_marginVertical="10dp"
        android:alpha="0.2" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center|start" >

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_launcher"
            android:background="@null" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/select_apk"
            android:textStyle="bold"
            android:textSize="20sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/select_all_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|end"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal"
        android:gravity="center" >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/select_all"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            style="?attr/materialIconButtonFilledTonalStyle"
            android:layout_marginHorizontal="10dp"
            android:layout_gravity="center|end"
            app:icon="@drawable/ic_select_all"
            app:iconTint="?attr/colorPrimary"
            android:text="@string/select_all"
            android:textStyle="bold|italic"
            android:clickable="false"
            android:gravity="center"
            android:textSize="17sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:nestedScrollingEnabled="true"
        android:layout_weight="1" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal"
        android:gravity="center" >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_cancel"
            android:text="@string/cancel"
            android:alpha="0.75" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/select"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select"
            app:icon="@drawable/ic_check"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>