<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_gravity="center" >

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_xml"
            android:scaleType="fitCenter"
            android:background="@null" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:layout_gravity="start|center"
            android:layout_marginStart="40dp"
            android:singleLine="true"
            android:textStyle="bold"
            android:textSize="18sp"
            android:padding="10dp"/>
    </FrameLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1" >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reset_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            app:icon="@drawable/ic_reset"
            android:text="@string/reset"
            android:layout_weight="0.33"
            android:layout_margin="5dp"
            app:iconGravity="textEnd"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            app:icon="@drawable/ic_delete"
            android:text="@string/delete"
            android:layout_weight="0.34"
            android:layout_margin="5dp"
            app:iconGravity="textEnd"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/apply_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_select"
            android:text="@string/apply"
            android:layout_gravity="end"
            android:layout_weight="0.33"
            android:layout_margin="5dp"
            app:iconGravity="textStart" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <include layout="@layout/recyclerview_layout" />
</androidx.appcompat.widget.LinearLayoutCompat>