<androidx.appcompat.widget.LinearLayoutCompat
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icon"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_build"
            android:layout_margin="15dp" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="150dp"
            android:layout_height="20dp"
            style="?android:attr/progressBarStyleHorizontal"
            android:progressBackgroundTint="?attr/colorPrimary"
            android:layout_gravity="center"
            android:indeterminate="true" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/task_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorPrimary"
            android:layout_margin="15dp"
            android:visibility="gone"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="17sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/output_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold|italic"
            android:layout_margin="10dp"
            android:clickable="false"
            android:gravity="center"
            android:visibility="gone"
            android:textSize="15sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/success"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:clickable="false"
                    android:textStyle="italic"
                    android:visibility="gone" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_gravity="end"
                    android:clickable="false"
                    android:textStyle="italic"
                    android:visibility="gone" />
        </FrameLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp" >

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/install"
                    style="@style/Widget.Material3.Button.TonalButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_installer"
                    android:text="@string/install"
                    android:visibility="gone" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/details"
                    style="@style/Widget.Material3.Button.TonalButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_expand"
                    android:text="@string/details"
                    android:visibility="gone" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_cancel"
                    android:text="@string/cancel"
                    android:alpha="0.75"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>